force-app/main/default/objects/VCG_CPQ_Product_Filter__c/VCG_CPQ_Product_Filter__c.object-meta.xml
<CustomObject>
    <description>To filter the list of products available through the &quot;Add New &quot; Pop up. (This is not the filters that the user applies, this is the filters to restrict what products are available at all.)</description>
    <label>VCG CPQ Product Filter</label>
    <nameField>
        <label>Filter Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>VCG CPQ Product Filters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>