force-app/main/default/objects/VCG_CPQ_Product_Filter__c/fields/Formula__c.field-meta.xml
<CustomField>
    <fullName>Formula__c</fullName>
    <label>Formula</label>
    <type>TextArea</type>
</CustomField>