force-app/main/default/objects/VCG_CPQ_Product_Filter__c/fields/Needs_Fields__c.field-meta.xml
<CustomField>
    <fullName>Needs_Fields__c</fullName>
    <inlineHelpText>Only needed for fields in the Formula field. Not needed for fields in the Product Where Clause.</inlineHelpText>
    <label>Needs Fields</label>
    <type>TextArea</type>
</CustomField>