force-app/main/default/objects/VCG_CPQ_Product_Filter__c/fields/Product_Where_Clause__c.field-meta.xml
<CustomField>
    <fullName>Product_Where_Clause__c</fullName>
    <inlineHelpText>WHERE clause for product SOQL query</inlineHelpText>
    <label>Product Where Clause</label>
    <type>TextArea</type>
</CustomField>